--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start-client": "react-scripts start",
     "start-server": "cd server && yarn start",
-    "start": "yarn run build && (cd server && yarn start)",
+    "start": "yarn run build && yarn start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
