--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
   "scripts": {
     "start-client": "react-scripts start",
     "start-server": "cd server && yarn start",
-    "start": "yarn run build && yarn start",
+    "start-both": "yarn run build && yarn start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "cd server && node index.js",
+    "heroku-postbuild": "yarn run build && (cd server && yarn install)"
   },
   "eslintConfig": {
     "extends": [
