--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start": "cd server && node app.js",
-    "heroku-postbuild": "yarn run build && (cd server && yarn install)"
+    "heroku-postbuild": "cd server && yarn install"
   },
   "eslintConfig": {
     "extends": [
